--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongodb": "^3.7.4",
     "next": "15.2.4",
     "next-auth": "^4.24.11",
+    "node-fetch": "^3.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0"
