--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@auth/core": "^0.34.2",
     "certifi": "^14.5.15",
+    "framer-motion": "^12.6.3",
     "lucide-react": "^0.485.0",
     "mongodb": "^3.7.4",
     "next": "15.2.4",
@@ -18,7 +19,9 @@
     "node-fetch": "^3.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
+    "react-player": "^2.16.0"
   },
   "devDependencies": {
     "@types/mongodb": "^4.0.6",
