--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "framer-motion": "^12.6.3",
     "lucide-react": "^0.485.0",
     "mongodb": "^3.7.4",
+    "mongoose": "^8.13.1",
     "next": "15.2.4",
     "next-auth": "^4.24.11",
     "node-fetch": "^3.3.2",
