--- a/package.json
+++ b/package.json
@@ -10,6 +10,14 @@
   },
   "dependencies": {
     "@auth/core": "^0.34.2",
+    "@editorjs/checklist": "^1.6.0",
+    "@editorjs/delimiter": "^1.4.2",
+    "@editorjs/editorjs": "^2.30.8",
+    "@editorjs/header": "^2.8.8",
+    "@editorjs/list": "^2.0.6",
+    "@editorjs/marker": "^1.4.0",
+    "@editorjs/paragraph": "^2.11.7",
+    "@editorjs/quote": "^2.7.6",
     "certifi": "^14.5.15",
     "framer-motion": "^12.6.3",
     "lucide-react": "^0.485.0",
