--- a/package.json
+++ b/package.json
@@ -11,13 +11,22 @@
   "dependencies": {
     "@auth/core": "^0.34.2",
     "@editorjs/checklist": "^1.6.0",
+    "@editorjs/code": "^2.9.3",
     "@editorjs/delimiter": "^1.4.2",
     "@editorjs/editorjs": "^2.30.8",
+    "@editorjs/embed": "^2.7.6",
     "@editorjs/header": "^2.8.8",
+    "@editorjs/image": "^2.10.2",
+    "@editorjs/inline-code": "^1.5.1",
+    "@editorjs/link": "^2.6.2",
     "@editorjs/list": "^2.0.6",
     "@editorjs/marker": "^1.4.0",
     "@editorjs/paragraph": "^2.11.7",
     "@editorjs/quote": "^2.7.6",
+    "@editorjs/raw": "^2.5.1",
+    "@editorjs/table": "^2.4.4",
+    "@editorjs/underline": "^1.2.1",
+    "@editorjs/warning": "^1.4.1",
     "certifi": "^14.5.15",
     "framer-motion": "^12.6.3",
     "lucide-react": "^0.485.0",
