--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@editorjs/table": "^2.4.4",
     "@editorjs/underline": "^1.2.1",
     "@editorjs/warning": "^1.4.1",
+    "axios": "^1.8.4",
     "certifi": "^14.5.15",
     "framer-motion": "^12.6.3",
     "lucide-react": "^0.485.0",
